# python

./: .gitignore  README.md  pyproject.toml  setup.cfg  test_ollama.py
.devcontainer/: devcontainer.json
paso1/tools/weather/: main.py
paso2/tools/weather/: openweather.py
paso3/agents/: reactive.py
paso3/tools/weather/: openweather.py
paso4/agents/: reactive.py
paso4/tools/weather/: openweather.py
paso5/agents/: reactive.py
paso5/tools/calendar/: cal_loader.py  main.py
paso5/tools/weather/: main.py  openweather.py
paso6/agents/: reactive.py
paso7/agents/: reactive.py
paso7/tools/calendar/: main.py
paso7/tools/weather/: openweather.py
pasoGdrive/agents/: reactive.py
pasoGdrive/tools/calendar/: cal_loader.py
pasoGdrive/tools/drive/: google.py  main.py
