[project]
name = "taller-agentes-mcp"
version = "0.1.0"
description = "Taller de agentes y herramientas usando MCP, LangGraph y LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "langgraph",
    "langchain",
    "langchain-ollama",
    "icalendar",
    "requests",
    "langchain-mcp-adapters",
    "langfuse",
    "googlemaps",
    "langchain-google-genai"
]
